# alfred_blood_bot

./: .env.template  bot.py  config.py  draw_image.py  draw_image2.py  image_config.py  pyproject.toml  test.py  text_strings.py  utils.py
alembic/: env.py
alembic/versions/: 2025_03_17_0028-2a7815122ddb_create_organization_table.py  2025_03_17_2255-7c8e87d6a1b5_create_user_table.py  2025_03_19_0332-1a43900668e6_update_user_add_tg_id.py  2025_03_19_2234-5c97b024f8ff_set_tg_id_unique.py  2025_03_19_2315-31945baa5ea5_change_tg_id_to_int.py  2025_04_09_0226-1e44b6df42e2_add_some_img_fields_in_organisation.py  2025_04_09_1106-57941eb25b8b_create_tables.py  2025_05_07_1107-f3168b18f851_add_vk_an_yd_fields.py  2025_05_11_2041-a0a7c77c7fd4_add_password_to_join_org.py  2025_05_12_1420-380e79719608_same_base_with_right_indexes.py  2025_05_15_0040-42c97d4f8366_add_post_del_flag.py  2025_05_23_1631-1ad6dd95f697_stat.py  2025_05_23_1952-c5ed9e49fa13_stat.py
img_config/: color_drops.json  simple_standard.json  snow_image.json  soft_flat_colors.json
models/: __init__.py  crud.py  db_helper.py  db_models.py  models.py
