[project]
name = "alfred4"
version = "0.1.0"
description = "Telegram bot for Blood Service"
authors = [
    {name = "Anton Abramov",email = "abramov.it@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pillow (>=11.1.0,<12.0.0)",
    "python-telegram-bot (>=21.10,<22.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "alembic (>=1.15.1,<2.0.0)",
    "sqlalchemy[asyncio] (>=2.0.39,<3.0.0)",
    "aiosqlite (>=0.21.0,<0.22.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


